--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.9.0",
     "expo": "~53.0.8",
     "expo-blur": "~14.1.4",
     "expo-constants": "~17.1.6",
+    "expo-file-system": "^18.1.10",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.1.7",
@@ -40,15 +42,21 @@
     "react-native-date-picker": "^5.0.12",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-image-picker": "^8.2.1",
+    "react-native-inner-shadow": "^2.3.0",
+    "react-native-inset-shadow": "^1.0.3",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-neomorph-shadows": "^1.1.2",
     "react-native-network-logger": "^2.0.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-select-dropdown": "^4.0.1",
+    "react-native-shadow-2": "^7.1.1",
+    "react-native-svg": "^15.12.0",
     "react-native-ui-datepicker": "^3.1.2",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5"
+    "react-native-webview": "13.13.5",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
