--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
       "@/*": [
         "./*"
       ]
-    }
+    },
+    "lib": ["es5","es6","dom","dom.iterable"]
   },
   "include": [
     "**/*.ts",
