--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-i18next": "^15.5.1",
     "react-native": "0.79.2",
     "react-native-date-picker": "^5.0.12",
+    "react-native-draggable-flatlist": "^4.0.3",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-image-picker": "^8.2.1",
     "react-native-inner-shadow": "^2.3.0",
